// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the correct tree 1`] = `
<form
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <textarea
    className="input"
    cols={40}
    id="913dda3d-0585-4540-a407-c8cb884b7445"
    name="text-area"
    onBlur={[Function]}
    onChange={[Function]}
    rows={4}
    value=""
    wrap="hard"
  />
  <p
    className="root"
  />
</form>
`;

exports[`renders with non-default columns/rows/wrap 1`] = `
<form
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <textarea
    className="input"
    cols={30}
    id="4a9c81ad-989c-4ec8-8dff-69dd53748cba"
    name="text-area"
    onBlur={[Function]}
    onChange={[Function]}
    rows={5}
    value=""
    wrap="soft"
  />
  <p
    className="root"
  />
</form>
`;
